--- a/index.html
+++ b/index.html
@@ -87,7 +87,103 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h1>Last win 11 prez</h1>
+          <section>
+            <h1>The last win 11 dev</h1>
+          </section>
+          <section>
+            <h1>Have tried mac twice</h1>
+            <h2>Focus on Windows</h2>
+            <h2>What it has to offer in 2025</h2>
+            <h2>An exciting overview</h2>
+          </section>
+          <section>
+            <h1>Caveats</h1>
+            <h2>No admin = no fun</h2>
+            <h2>Do we really care?</h2>
+            <h2>
+              No M5 ARM, yet
+              <!-- TODO compare to new snapdragon? -->
+            </h2>
+          </section>
+          <section>
+            <h1>Caveats 2</h1>
+            <h2>Gaming is more fun on windows</h2>
+            <h2>MS push for AI is annoying</h2>
+            <h2>But sometimes fun</h2>
+            <h2>Backward compatibility is a double-edged sword</h2>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h1>New and fun</h1>
+            <h2>WSL 2</h2>
+            <h2>Linux GUI</h2>
+            <h2>Winget</h2>
+            <h2>Powertoys</h2>
+            <h2>Sandbox</h2>
+            <h2>Sudo</h2>
+          </section>
+          <section>
+            <h1>Setup Win 11</h1>
+            <h2>Hyper V</h2>
+            <h2>WSL 2</h2>
+            <h2>Gui apps</h2>
+            <h2>Ubuntu, Arch or Fedora</h2>
+            <h2>Rancher Desktop</h2>
+          </section>
+          <section>
+            <h2>Windows terminal</h2>
+            <!-- Trailer -->
+          </section>
+          <section>
+            <h2>Winget</h2>
+            <h2>Most apps</h2>
+            <!-- Screenshot of  -->
+          </section>
+          <section>
+            <h2>Powershell 7</h2>
+            <h2>Node.js</h2>
+            <h2>fnm</h2>
+            <h2>Git</h2>
+            <h2>Git bash as npm default</h2>
+          </section>
+          <section>
+            <h2>Advanced win settings</h2>
+            <h2>Sudo</h2>
+            <h2>Dev Drive</h2>
+            <h2>File explorer</h2>
+          </section>
+          <section>
+            <h2>OpenSSH Client</h2>
+          </section>
+          <section>
+            <h2>Edit</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Powertoys</h2>
+            <h2>Colorpicker</h2>
+            <h2>Command pallet</h2>
+            <h2>File locksmith</h2>
+            <h2>Mouse Without Borders</h2>
+            <h2>Peek</h2>
+            <h2>Screen ruler</h2>
+            <h2>Workspaces</h2>
+          </section>
+        </section>
+        <section>
+          <h1>Other cool features</h1>
+          <!-- TODO fill -->
+        </section>
+        <section>
+          <h1>When windows breaks</h1>
+          <!-- TODO fill -->
+        </section>
+        <section>
+          <h1>Summary and future</h1>
+          <!-- TODO fill -->
         </section>
       </div>
     </div>
