--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
             <h2 class="fragment">Some really old <span class="error">outdated</span> parts</h2>
           </section>
           <section>
-            <h2>No M5 ARM<span class="fragment">, yet</span></h2>
+            <h2><span class="error">No</span> M5 ARM<span class="fragment">, yet</span></h2>
             <img class="fragment" src="img/snapdragon.png" />
           </section>
           <section>
             <h1>Love to <span class="error">hate</span> <span class="windows">Windows</span></h1>
             <h2 class="fragment">SSD <span class="error">issues</span></h2>
             <h2 class="fragment">localhost <span class="error">issues</span></h2>
+            <h2 class="fragment">Start menu <span class="error">issues</span></h2>
           </section>
         </section>
         <section>
@@ -117,10 +118,12 @@
             <h2 class="fragment">WSL 2</h2>
             <h2 class="fragment">Gui apps</h2>
             <h2 class="fragment">Ubuntu, Arch or Fedora</h2>
-            <h2 class="fragment">Rancher Desktop</h2>
           </section>
           <section>
-            <h2>Windows terminal</h2>
+            <img src="img/rancher.png" />
+          </section>
+          <section>
+            <h2><span class="windows">Windows</span> terminal</h2>
             <video data-autoplay loop src="video/terminal.mp4"></video>
           </section>
           <section>
@@ -143,9 +146,16 @@
           </section>
           <section>
             <h1>Advanced <span class="windows">Win 11</span> settings</h1>
-            <h2 class="fragment">Sudo</h2>
+            <img class="fragment" src="img/sudo.png" />
             <h2 class="fragment">OpenSSH Client</h2>
-            <h2 class="fragment">File explorer</h2>
+          </section>
+          <section>
+            <h2 class="fragment">File <span class="windows">explorer</span> + <span class="git">Git</span></h2>
+            <img class="fragment" src="img/exporer-git.png" />
+          </section>
+          <section>
+            <h2>Explorer <span class="windows">tabs</span></h2>
+            <video data-autoplay loop src="video/exporer-tabs.mp4"></video>
           </section>
           <section>
             <h1 class="">Dev Drive 💾</h1>
@@ -156,6 +166,8 @@
           </section>
           <section>
             <h2>Edit</h2>
+            <video data-autoplay loop src="video/edit.mp4"></video>
+            <!-- <img class="fragment" src="img/edit.png" /> -->
           </section>
         </section>
 
@@ -173,41 +185,48 @@
         </section>
         <section>
           <section>
-            <h1>Other cool features</h1>
+            <h1>Other <span class="windows">cool</span> features 😎</h1>
           </section>
           <section>
             <h2>Snippet</h2>
+            <img src="img/snipping.png" class="fragment" />
+            <h2 class="fragment">And <span class="windows">Video</span> + <span class="windows">Gif</span> support!</h2>
           </section>
           <section>
             <h2>Advanced clipboard</h2>
+            <img src="img/paste.png" class="fragment" />
           </section>
           <section>
             <h2>Meta quest 3</h2>
+            <img class="fragment" style="width: 60vw" src="img/quest3.jpg" />
+          </section>
+          <section>
+            <h2>Sandbox 💻</h2>
+            <!-- TODO -->
           </section>
           <section>
             <h2>Phone Link</h2>
+            <img src="img/phonelink.png" class="fragment" />
           </section>
           <section>
             <h2>Precision touchpad</h2>
+            <img src="img/touchpad.png" class="fragment" />
           </section>
           <section>
             <h2>Notepad upgrade</h2>
+            <video data-autoplay loop src="video/notepad.mp4"></video>
           </section>
           <section>
             <h2>Task manager upgrade</h2>
+            <video data-autoplay loop src="video/taskmanager.mp4"></video>
           </section>
           <section>
+            <!-- DELETE? -->
             <h2>Windows Hello</h2>
             <h2>Passkeys</h2>
           </section>
           <section>
             <h2>Virtual Desktops</h2>
-          </section>
-          <section>
-            <h2>Windows explorer tabs</h2>
-          </section>
-          <section>
-            <h2>DevDrive with ReFS</h2>
           </section>
         </section>
         <section>
