--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
+
+      .powertoys-gradient {
+        /* Linear gradient from left to right (to right) */
+        background: linear-gradient(
+          to right,
+          /* Red/Orange (approximating the first bar) */ #e84a3b 0%,
+          /* Yellow (approximating the second bar) */ #ffd700 25%,
+          /* Green (approximating the third bar) */ #4caf50 50%,
+          /* Blue (approximating the fourth bar) */ #2196f3 75%,
+          /* Blue again to make the last bar solid until the end */ #2196f3 100%
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     </style>
   </head>
   <body>
@@ -108,7 +123,7 @@
             <h1>New and <span class="windows">fun</span></h1>
             <h2 class="fragment">WSL 2 🖥️ + GUI</h2>
             <h2 class="fragment">Winget 📦</h2>
-            <h2 class="fragment">Powertoys 🔫</h2>
+            <h2 class="fragment"><span class="powertoys-gradient">Powertoys</span> 🔫</h2>
             <h2 class="fragment">Sandbox 💻</h2>
             <h2 class="fragment">Sudo 🫡</h2>
           </section>
@@ -168,14 +183,37 @@
 
         <section>
           <section>
-            <h2>Powertoys</h2>
-            <h2 class="fragment">Colorpicker</h2>
-            <h2 class="fragment">Command pallet</h2>
-            <h2 class="fragment">File locksmith</h2>
-            <h2 class="fragment">Mouse Without Borders</h2>
-            <h2 class="fragment">Peek</h2>
-            <h2 class="fragment">Screen ruler</h2>
-            <h2 class="fragment">Workspaces</h2>
+            <h2><span class="powertoys-gradient">Powertoys</span></h2>
+            <!-- <img src="img/powertoys.png" /> -->
+            <video style="width: 60vw" loop src="video/powertoys.mp4"></video>
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Colorpicker</span></h2>
+            <img src="img/ColorPicker.gif" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Command pallet</span></h2>
+            <img src="img/CmdPal.png" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">File locksmith</span></h2>
+            <img src="img/FileLocksmith.gif" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Mouse Without Borders</span></h2>
+            <img src="img/MouseWithoutBorders.png" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Peek</span></h2>
+            <img src="img/Peek.png" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Screen ruler</span></h2>
+            <img src="img/ScreenRuler.gif" />
+          </section>
+          <section>
+            <h2><span class="powertoys-gradient">Workspaces</span></h2>
+            <img src="img/Workspaces.png" />
           </section>
         </section>
         <section>
