--- a/index.html
+++ b/index.html
@@ -246,25 +246,25 @@
             <img src="img/touchpad.png" class="fragment" />
           </section>
           <section>
-            <h2>Notepad upgrade</h2>
+            <h2><span class="windows">Notepad</span> upgrade</h2>
             <video loop src="video/notepad.mp4"></video>
           </section>
           <section>
-            <h2>Task manager upgrade</h2>
+            <h2><span class="windows">Task manager</span> upgrade</h2>
             <video loop src="video/taskmanager.mp4"></video>
           </section>
-          <section>
-            <!-- DELETE? -->
+          <!-- <section>
             <h2>Windows Hello</h2>
             <h2>Passkeys</h2>
-          </section>
+          </section> -->
           <section>
-            <h2>Virtual Desktops</h2>
+            <h2 class="windows">Virtual Desktops</h2>
+            <video loop src="video/desktops.mp4"></video>
           </section>
         </section>
         <section>
           <section>
-            <h1>When windows breaks</h1>
+            <h1>When <span class="windows">windows</span> <span class="error">breaks</span></h1>
             <h2 class="fragment">sfc /scannow</h2>
             <h2 class="fragment">dism /online /cleanup-image /scanhealth</h2>
             <h2 class="fragment">dism /online /cleanup-image /restorehealth</h2>
