--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <h2 class="fragment">SSD <span class="error">issues</span></h2>
             <h2 class="fragment">localhost <span class="error">issues</span></h2>
             <h2 class="fragment">Start menu <span class="error">issues</span></h2>
+            <h2 class="fragment">People <i class="error bold">hate</i> change</h2>
           </section>
         </section>
         <section>
