first end to end version

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           </section>
           <section>
             <h2>Sandbox 💻</h2>
-            <!-- TODO -->
+            <video loop src="video/sandbox.mp4"></video>
           </section>
           <section>
             <h2>Phone Link</h2>
@@ -275,9 +275,12 @@
         </section>
         <section>
           <section>
-            <h1>Summary and future</h1>
+            <h1>Summary and <span class="windows">future</span></h1>
+            <h2 class="fragment">A lot of new <span class="windows">features</span> cooking</h2>
+            <h2 class="fragment"><span class="windows">No need</span> for me to switch</h2>
+            <h2 class="fragment">Really <span class="windows">surprised</span>!</h2>
+            <h2 class="fragment windows">Questions?</h2>
           </section>
-          <!-- TODO fill -->
         </section>
       </div>
     </div>
