--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
             <h2>Winget 📦</h2>
             <h2 class="fragment"><span class="windows">Most</span> apps</h2>
             <img class="fragment" src="img/winget.png" />
-            <!-- Screenshot of  -->
             <h2 class="fragment">Powershell 7</h2>
           </section>
           <section>
@@ -222,16 +221,16 @@
             <h1>Other <span class="windows">cool</span> features 😎</h1>
           </section>
           <section>
-            <h2>Snippet</h2>
+            <h2><span class="windows">Snippet</span> ✂️</h2>
             <img src="img/snipping.png" class="fragment" />
             <h2 class="fragment">And <span class="windows">Video</span> + <span class="windows">Gif</span> support!</h2>
           </section>
           <section>
-            <h2>Advanced clipboard</h2>
+            <h2><span class="windows">Advanced</span> clipboard</h2>
             <img src="img/paste.png" class="fragment" />
           </section>
           <section>
-            <h2>Meta quest 3</h2>
+            <h2>Meta <span class="windows">quest</span> 3</h2>
             <img class="fragment" style="width: 60vw" src="img/quest3.jpg" />
           </section>
           <section>
@@ -239,11 +238,11 @@
             <video loop src="video/sandbox.mp4"></video>
           </section>
           <section>
-            <h2>Phone Link</h2>
+            <h2>Phone <span class="windows">Link</span> 📱</h2>
             <img src="img/phonelink.png" class="fragment" />
           </section>
           <section>
-            <h2>Precision touchpad</h2>
+            <h2><span class="windows">Precision</span> touchpad</h2>
             <img src="img/touchpad.png" class="fragment" />
           </section>
           <section>
@@ -266,10 +265,10 @@
         <section>
           <section>
             <h1>When <span class="windows">windows</span> <span class="error">breaks</span></h1>
-            <h2 class="fragment">sfc /scannow</h2>
-            <h2 class="fragment">dism /online /cleanup-image /scanhealth</h2>
-            <h2 class="fragment">dism /online /cleanup-image /restorehealth</h2>
-            <h2 class="fragment">Reinstall just Windows</h2>
+            <h2 class="fragment">sfc <span class="windows">/scannow</span></h2>
+            <h2 class="fragment">dism /online /cleanup-image <span class="windows">/scanhealth</span></h2>
+            <h2 class="fragment">dism /online /cleanup-image <span class="windows">/restorehealth</span></h2>
+            <h2 class="fragment">Reinstall <span class="windows">just</span> Windows</h2>
             <img class="fragment" src="img/recover-quic.png" />
           </section>
         </section>
