--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <h2 class="fragment">MS push for AI is <span class="error">annoying</span></h2>
             <h2 class="fragment">Gaming is more fun on <span class="windows">Windows</span></h2>
             <h2 class="fragment">Some really old <span class="error">outdated</span> parts</h2>
+            <h2 class="fragment">Ignore <span class="error">Office</span> and <span class="error">OneDrive</span></h2>
           </section>
           <section>
             <h2><span class="error">No</span> M5 ARM<span class="fragment">, yet</span></h2>
