--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </section>
           <section>
             <h2><span class="windows">Windows</span> terminal</h2>
-            <video loop src="video/terminal.mp4"></video>
+            <video loop muted src="video/terminal.mp4"></video>
           </section>
           <section>
             <h2>Winget 📦</h2>
