--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
             <img src="img/CmdPal.png" />
           </section>
           <section>
+            <h2><span class="powertoys-gradient">FancyZones</span></h2>
+            <img src="img/FancyZones.gif" />
+          </section>
+          <section>
             <h2><span class="powertoys-gradient">File locksmith</span></h2>
             <img src="img/FileLocksmith.gif" />
           </section>
